content image styling (add dropshadow fix spacing)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7131,7 +7131,12 @@ header.navbar {
     margin-bottom: 2em; }
   .content img {
     display: block;
-    margin: 2em auto 2em auto; }
+    margin: 2em auto 2em auto;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25); }
+  .content :nth-child(1) {
+    margin-top: 0; }
+  .content :last-child {
+    margin-bottom: 0; }
 
 .content.portfolio h2 {
   font-size: 2.5rem;
