--- a/styles/partials/content.scss
+++ b/styles/partials/content.scss
@@ -12,6 +12,13 @@
     img {
         display: block;
         margin: 2em auto 2em auto;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+    }
+    :nth-child(1){
+        margin-top: 0;
+    }
+    :last-child{
+        margin-bottom: 0;
     }
 }
 
